--- a/resources/scss/_course_screen.scss
+++ b/resources/scss/_course_screen.scss
@@ -9,29 +9,26 @@
         justify-content: space-between;
         align-items: center;
         background-color: #ffffff;
+        .fs-4 {
+            @media screen and (max-width: 576px) {
+                font-size: 16px !important;
+            }
+        }
         .each-course{
             width: 295px;
-            //height: 530px;
             display: inline-block;
             background-position: center;
             background-size: contain;
             background-repeat: no-repeat;
             margin: 10px;
-            @media screen and (max-width: 1200px) {
-                width: 350px;
-            }
             .each-course-img{
                 width: 100%;
                 height: 200px;
                 object-fit: cover;
                 object-position: top;
-                @media screen and (max-width: 1200px) {
-                    height: 350px;
-                }
             }
             .each-course-content{
                 width: 100%;
-                //height: 280px;
                 display: flex;
                 flex-direction: column;
                 justify-content: space-between;
