--- a/resources/scss/_root.scss
+++ b/resources/scss/_root.scss
@@ -25,7 +25,7 @@ body{
 }
 
 
-.text-shadow-sm{ text-shadow: 1px 1px 1px #000000; }
+.text-shadow-sm{ text-shadow: 1px 1px 10px #2f2f2f; }
 .text-theme { color: #2491eb; }
 
 
