--- a/resources/scss/_custom_breadcrumb.scss
+++ b/resources/scss/_custom_breadcrumb.scss
@@ -104,6 +104,7 @@
         height: 100%;
         background-size: cover;
         background-position: top;
+        background-color: #e6e6e6;
     }
 
     .breadcrumb-left {
