--- a/resources/scss/_welcome_screen.scss
+++ b/resources/scss/_welcome_screen.scss
@@ -9,13 +9,13 @@
     position: relative;
     padding-top: 150px;
     &:before {
-        position: absolute;
-        content: '';
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background-color: rgba(0, 0, 0, 0.4);
+        //position: absolute;
+        //content: '';
+        //top: 0;
+        //left: 0;
+        //width: 100%;
+        //height: 100%;
+        //background-color: rgba(0, 0, 0, 0.4);
     }
 
     @media screen and (max-width: 1200px) {
@@ -40,7 +40,9 @@
             max-width: 600px;
             width: 100%;
             display: block;
-            background-color: rgba(0, 0, 0, 0.5);
+            //background-color: rgba(0, 0, 0, 0.5);
+            background-color: rgba(#141A45, 0.7);
+            border-radius: 10px;
             padding: 50px;
             @media screen and (max-width: 1200px) {
                 .h1-lg {
@@ -77,12 +79,15 @@
         }
         @media screen and (max-width: 768px) {
             width: 100%;
+            margin-bottom: 50px;
         }
         .vocational-screen-content{
             max-width: 600px;
             width: 100%;
             display: block;
-            background-color: rgba(0, 0, 0, 0.5);
+            //background-color: rgba(0, 0, 0, 0.5);
+            background-color: rgba(#141A45, 0.7);
+            border-radius: 10px;
             padding: 50px;
             @media screen and (max-width: 1200px) {
                 .h1-lg {
