--- a/resources/scss/_courses_screen.scss
+++ b/resources/scss/_courses_screen.scss
@@ -18,6 +18,19 @@
             object-fit: cover;
             object-position: center;
             display: block;
+            &.vocational-image {
+                height: 675px;
+                @media screen and (max-width: 1199px) {
+                    object-position: top;
+                    width: 100%;
+                    min-width: 100%;
+                    max-width: 100%;
+                    height: 450px;
+                }
+                @media screen and (max-width: 991px) {
+                    height: 300px;
+                }
+            }
             @media screen and (max-width: 1199px) {
                 object-position: top;
                 width: 100%;
