--- a/resources/scss/_header.scss
+++ b/resources/scss/_header.scss
@@ -15,7 +15,11 @@
     .website-name {
         width: 100%;
         padding: 5px 0 15px 0;
-
+        .logo{
+            height: 60px;
+            &.logo-dark{ display: none; }
+            &.logo-light{ display: inline-block; }
+        }
         h1 {
             a {
                 text-decoration: none;
@@ -213,6 +217,10 @@
         @include transition(all 0.4s linear);
 
         .website-name {
+            .logo{
+                &.logo-dark{ display: inline-block; }
+                &.logo-light{ display: none; }
+            }
             h1 {
                 a {
                     color: #555555;
