update-issue-of-vocation-course-issue

--- a/resources/scss/_course_details_screen.scss
+++ b/resources/scss/_course_details_screen.scss
@@ -69,7 +69,9 @@
             background-position: center;
         }
     }
-
+    .line-height-1_5 {
+        line-height: 1.5;
+    }
     .team-title {
         font-size: 32px;
         @media screen and (max-width: 1199px) {
