--- a/resources/scss/_contact_screen.scss
+++ b/resources/scss/_contact_screen.scss
@@ -41,7 +41,7 @@
     }
     .get-in-touch-screen-container {
         .form-control, .form-textarea, .form-select {
-            background-color: #dee2e6 !important;
+            background-color: #dee2e6c2 !important;
             border: 1px solid #dee2e6 !important;
             transition: 0.3s all ease-in-out;
             outline: none !important;
